apps/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portfolio-deployment
  labels:
    app: portfolio

spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 2
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: portfolio
      containers:
        - name: web
          image: ghcr.io/hridaya2004/portfolio:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      imagePullSecrets:
        - name: ghcr-secret
